# ai-agent-saas

./: .coderabbit.yaml  .gitignore  README.md  package-lock.json  package.json
agent-worker/: Dockerfile  high_quality_audio_forwarder.py  jitter_buffered_audio_track.py  main.py  pyproject.toml
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/agents/: page.tsx
src/app/(dashboard)/agents/[agentId]/: page.tsx
src/app/(dashboard)/meetings/: page.tsx
src/app/(dashboard)/meetings/[meetingId]/: page.tsx
src/app/api/webhook/: route.ts
src/app/call/: layout.tsx
src/app/call/[meetingId]/: page.tsx
src/components/: active-state.tsx  cancelled-state.tsx  command-select.tsx  completed-state.tsx  data-pagination.tsx  data-table.tsx  empty-state.tsx  error-state.tsx  generated-avatar.tsx  loading-state.tsx  processing-state.tsx  responsive-dialog.tsx  upcoming-state.tsx
src/components/ui/: badge.tsx  button.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  sidebar.tsx
src/config/: zod.ts
src/db/: schema.ts
src/hooks/: use-confirm.tsx
src/inngest/: client.ts  functions.ts
src/lib/: auth.ts  avatar.ts  utils.ts
src/modules/agents/: schemas.ts  types.ts
src/modules/agents/server/: procedures.ts
src/modules/agents/ui/components/: agent-form.tsx  columns.tsx  (+6 more)
src/modules/call/components/: call-active.tsx  call-connect.tsx  call-ended.tsx  call-lobby.tsx  call-provider.tsx  call-ui.tsx
src/modules/meetings/: params.ts  schemas.ts  types.ts
src/modules/meetings/server/: procedures.ts
src/trpc/: init.ts
(+21 files in other folders)
