[project]
name = "meeting-vision-agent"
version = "0.1.0"
description = "Vision Agents worker for the AI meeting application"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.116.0",
  "httpx[socks]>=0.28.1",
  "python-dotenv>=1.1.0",
  "python-socks[asyncio]>=2.7.0",
  "uvicorn[standard]>=0.35.0",
  "vision-agents[getstream,openai,xai]>=0.6.8,<0.7",
]

[tool.uv]
package = false
